fix spelling in patials

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                     <li><a href="schedule.html" hx-get="/partials/schedule.html" hx-trigger="click" hx-target="#content">Dagskrá</a></li>
                     <li><a href="venue.html" hx-get="/partials/venue.html" hx-trigger="click" hx-target="#content">Staðsetning</a></li>
                     <li class="dropdown">
-                      <a href="media.html" hx-get="/partials/manifesto.html" hx-trigger="click" hx-target="#content">Hugmyndafræðin</a>
+                      <a href="videos.html" hx-get="/partials/videos.html" hx-trigger="click" hx-target="#content">Hugmyndafræðin</a>
                       <div class="dropdown-content">
-                        <a href="videos.html" hx-get="/patials/videos.html" hx-trigger="click" hx-target="#content">Myndbönd</a>
+                        <a href="videos.html" hx-get="/partials/videos.html" hx-trigger="click" hx-target="#content">Myndbönd</a>
                         <a href="https://eiha.org/hemp-manifesto/">Hamp Skjalið</a>
                         <a href="https://ec.europa.eu/stories/european-green-deal/">Græni samningurinn</a>
                       </div>
