--- a/en/index.html
+++ b/en/index.html
@@ -55,7 +55,7 @@
                     <li class="dropdown">
                       <a href="media.html" hx-get="/en/partials/manifesto.html" hx-trigger="click" hx-target="#content">The Mission</a>
                       <div class="dropdown-content">
-                        <a href="videos.html" hx-get="/en/patials/videos.html" hx-trigger="click" hx-target="#content">Media</a>
+                        <a href="videos.html" hx-get="/en/partials/videos.html" hx-trigger="click" hx-target="#content">Media</a>
                         <a href="https://eiha.org/hemp-manifesto/">Hemp manifesto</a>
                         <a href="https://ec.europa.eu/stories/european-green-deal/">EU Green deal</a>
                       </div>
