Add bios/images Bozidar, Anna/Jan and Jamie Pearson

--- a/bios/bozidar.html
+++ b/bios/bozidar.html
@@ -4,7 +4,39 @@
         </div>
         <div class="bio-text">
 <h2>Bozidar Radisic - SI</h2>
-    <p> Project Manager and founder of Research and Nature Institute, Medical data . Bozidar is a representative of ONEJ in network of NGO's in the field of drugs in Slovenia and a member of IACM – International Association for Cannabinoid Medicines. </p>
+    <p>Researcher</p>
+    <br>
+    <p><ul>
+      <li>PEST (FIST) Human Rights Association</li>
+      <li>Founder of Research Nature Institute</li>
+      <li>Cannabis Info Point</li>
+    </ul>
+    </p>
+      <br>
+    <p>Božidar Radišič has been a vocal cannabis activist for almost two decades, he is the founder and
+president of FIST – human rights association, a member of IACM – International Association
+for Cannabinoid Medicines and founder of the <a href="http://www.researchnature.com/">Research Nature institute</a> in Ljubljana, Slovenia.</p>
+    <p>Thusfar, Božidar has organized eight international scientific conferences aimed at <a href="http://demystifyingcannabis.org/gallery">demystifying
+cannabis</a></p>
+    <p>The 5t h conference held in Ljubljana in 2019 was also the first conference of the kind to be part of the
+licensed training program of the Medical Chamber of Slovenia and the Chamber of Nursing and
+Midwifery Services of Slovenia. He continued the tradition of education of professionals also in 2022
+by organizing 2 seminaries for doctors and nurses with the Faculty of health sciences.</p>
+    <p>He regulary lectures and participates at cannabis-related seminars and other events in Slovenia
+and abroad. He is known as a tireless activist and medical cannabis advocate in Slovenia, EU and the
+Western Balkans.</p>
+    <p>Research Nature Institute and FIST – human rights association are monitoring the products on the
+slovenian market. Both – legal and illegal.</p>
+    <p>Cannabis extracts and cannabis use are widely spread among slovenian patients, mostly oncologycal,
+neurological and patients with autoimmune deseases.</p>
+    <p>Since the state was not able to regulate this field, patients are mostly using products from black
+market or from their own production (60%). But those products are too often of poor quality and
+patients are left by themselves without knowledge of proper dosing and administration ways.</p>
+    <p>Quality of extracts and way of administration is crucial, so he decided to test the products in RNI lab
+with HPLC and GC/MS and advise patients how to use cannabis products properly, to achieve best
+results.</p>
+    <p>On this way we obtained precious insight about cannabis use among patients, quality of the products
+and the results.</p>
         </div>
     </div>
 
