--- a/bios/jamie.html
+++ b/bios/jamie.html
@@ -4,6 +4,31 @@
         </div>
         <div class="bio-text">
 <h2>Jamie Pearson</h2>
-    <p>Jamie is a business leader and consultant with over a decade of experience in the legal cannabis industry and nearly three decades in real estate investment, finance, and celebrity partnerships.</p>
+    <p>Jamie Pearson is a keynote speaker, writer, accredited investor, board member
+and highly respected leader in the cannabis industry. Jamie’s “in the trenches”
+operational success and deep, global relationships led her to be coined “Wonder
+Woman” in the 2023 Women of Influence issue of Cannabis Now Magazine and twice,
+one of the most influential women in cannabis by High Times. Jamie has been a
+prosperous investor in global real estate on three continents. She studied German at
+the University of Wuppertal and has split her time between the two countries for over 25
+years. She is generous with her time and knowledge and currently sits on the advisory
+boards of Dope Drinks, The Cannabis Summit, Marley One, Cellotex Dev Ltd, and the
+Global Cannabis Network Collective (GCNC).</p>
+    <p>Jamie founded and leads The New Holland Group (NHG), a global consulting
+firm serving clients with international business development &amp; strategy, operations,
+branding &amp; marketing, effective capital raising, executive coaching, cross border IP
+licensing, celebrity partnerships, and financial turnarounds.</p>
+    <p>Before NHG, Jamie spent seven years, including three as the President &amp; CEO,
+of Bhang Inc. [CSE:BHNG] one of the world’s most-awarded infused edible brands,
+famous for its infused chocolate bars. She led the company’s diverse executive team,
+managed the global expansion plan, ran the capital markets division, and was the face
+of the brand – catapulting Bhang from a California favorite to a multi-national
+phenomenon. When Jamie exited Bhang, the brand had been distributed in 7 US states
+and 10 countries through licensing deals with the likes of Trulieve, [CSE:TRUL], Indiva
+[TSX:NDVA] and Origin House [CSE:OH] (now Cresco). Jamie served four years as the
+Vice Chairman of Bhang’s Board and served on the audit committee.</p>
+    <p>Jamie speaks in the areas of business trends in hemp and cannabis, leadership,
+global brand expansion, ESG, IP &amp; brand licensing, win-win deal structuring, and
+celebrity partnerships. Contact Jamie at jamie@new-holland.group.</p>
         </div>
     </div>
