--- a/en/index.html
+++ b/en/index.html
@@ -34,6 +34,7 @@
                     <li class="dropdown">
                         <a href="speakers.html" hx-get="partials/speakers.html"  hx-trigger="click" hx-target="#content">Speakers</a>                        <div class="dropdown-content">
                                         <div class="dropdown-list">
+<a href="annajan.html" hx-get="/bios/annajan.html" hx-trigger="click" hx-target="#content">Anna and Jan</a>
 <a href="bozidar.html" hx-get="/bios/bozidar.html" hx-trigger="click" hx-target="#content">Bozidar Radisic</a>
 <a href="jamie.html" hx-get="/bios/jamie.html" hx-trigger="click" hx-target="#content">Jamie Pearson</a>
 <a href="jasna.html" hx-get="/bios/jasna.html" hx-trigger="click" hx-target="#content">Jasna Kovac</a>
