Fix anna and jan

--- a/speakers/annajan.html
+++ b/speakers/annajan.html
@@ -1,9 +1,9 @@
 <div class="speaker-bio">
         <div class="bio-image">
-            <img src="/images/annajan.png" alt="Anna 6 Jan">
+            <img src="/images/annajan.png" alt="Anna and Jan">
         </div>
         <div class="bio-text">
-<h2>Anna 6 Jan</h2>
+<h2>Anna and Jan</h2>
     <p>Anna and Jan are architects and the founders of studio lúdika. They studied in Britain and worked in London for a number of years. The projects of the studio are varied with a focus on design and research on building with biobased materials. They also tutor at the architecture department at the Iceland University of the Arts. Their brainchild is the BioBuilding project, part of which is the first Icelandic hempcrete building. It was built last summer with the aid of travelling carpenters, the Wandergesellen.</p>
         </div>
     </div>
